# Val

./: .dockerignore  .env  .gitignore  docker-compose.yml  pyproject.toml
alembic/versions/: a1d0b1a45ccd_add_skin_levels_and_chromas.py  a3595018fce8_create_buddies_table.py  c2e6cce43cc1_create_buddies_table.py  fca86a9c1fdf_buddies_added.py
front/: mainPage.html  mainPageStyles.css
src/api/: routers.py
src/models/: buddie_models.py  spray_models.py  weapon_models.py
src/schemas/: weapon_schemas.py  weapon_skins_schemas.py
src/services/: db_test.py  import_weapon_chromas.py
val_back/: Dockerfile  pyproject.toml
val_back/alembic/: env.py
val_back/alembic/versions/: 4c6fc40a32e6_init.py  73aaec4191cd_create_sprays_table.py  7c84cb766b90_create_buddies_table.py  9b1c329273bd_add_skin_levels_and_chromas.py  f15b12c955d1_create_sprays_table.py
val_back/src/: main.py
val_back/src/api/: admin.py  buddies.py  sprays.py  weapons.py
val_back/src/core/: config.py
val_back/src/db/: db.py
val_back/src/schemas/: buddie_schemas.py  spray_schemas.py
val_back/src/services/: import_buddies.py  import_skins.py  import_spray_levels.py  import_sprays.py  import_weapon_levels.py  import_weapons.py
val_front/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
val_front/src/: index.css  main.jsx
val_front/src/app/: App.jsx
val_front/src/data/: weaponsInfo.js
val_front/src/layout/: RootLayout.css  RootLayout.jsx  authLayout.css  authLayout.jsx
val_front/src/pages/: Auth.css  Auth.jsx  Catalog.jsx  Home.jsx  Profile.jsx  Stats.jsx  home.css  (+3 more)
(+11 files in other folders)
