[tool.poetry]
name = "valorant-back"
version = "0.1.0"
description = ""
authors = ["spiridonburgeranov <dead.yasu482@gmail.com>"]
readme = "README.md"
license = ""

[tool.poetry.dependencies]
python = ">=3.12.10,<3.13"
fastapi = { extras = ["standard"], version = "^0.124.4" }
sqlalchemy = ">=2.0.45,<3.0.0"
alembic = ">=1.17.2,<2.0.0"
pydantic = ">=2.12.5,<3.0.0"
pydantic-settings = ">=2.12.0,<3.0.0"
aiosqlite = "^0.22.0"
asyncpg = "^0.31.0"
psycopg2-binary = "^2.9.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.10"
black = "^25.12.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
